font enhancements moved from Roboto to Open Sans, fix /blog pages so they always use a thin font, body of posts and pages now weights 'regular' on retina screens (so it's more readable. you may want to change this in case you change font, e.g. Open Sans back to Roboto)

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -3,19 +3,19 @@
 // Pages
 //
 
-.page-title {
-  @include mobile{
-    text-align: center;
+.page {
+  font-weight: 400;
+  //color: $darkGray; // commented as it uses color from 'body' in _base.scss
+
+  @include retina {
+    strong, b {
+      font-weight: bold;
+    }
   }
 }
 
-.page-options {
-  h5 {
-    font-size: 20px;
-    color: $gray;
-  }
-
-  @include mobile {
+.page-title {
+  @include mobile{
     text-align: center;
   }
 }
@@ -33,9 +33,8 @@
   }
 }
 
-.fingerprint {
-    font-family: $defaultSansSerifBody;
-    font-size: 16px;
+.monospaced {
+    font-family: $defaultMonospaced;
     font-style: normal !important;
     color: $gray;
 }
